@@ -12,6 +12,16 @@ import java.util.jar.Manifest;
 import jp.mikumiku.lal.agent.LALAgentBridge;
 
 public class LALAgentLoader {
+
+    private static final org.apache.logging.log4j.Logger LOGGER =
+            org.apache.logging.log4j.LogManager.getLogger("lal");
+
+    /**
+     * Left in the working directory so -javaagent:lal-agent.jar can activate the agent on the next
+     * launch: the JDK denies self-attach by default and no mod can add JVM startup arguments.
+     */
+    public static final File DEPLOYED_AGENT_JAR = new File("lal-agent.jar");
+
     private static boolean attempted = false;
 
     public LALAgentLoader() {
@@ -26,14 +36,52 @@ public class LALAgentLoader {
         if (LALAgentBridge.isAgentReady()) {
             return;
         }
+
+        // Denied by default since JDK 9, and the decision is taken when the attach
+        // implementation initialises, so this must precede any attach-class load.
+        try { System.setProperty("jdk.attach.allowAttachSelf", "true"); } catch (Throwable ignored) {}
+
         try {
             File agentJar = LALAgentLoader.createAgentJar();
             LALAgentLoader.attachAgent(agentJar);
         }
-        catch (Exception e) {
+        catch (Throwable e) {
+        }
+
+        // Initialised here rather than on the Attach Listener thread.
+        try {
+            Object captured = System.getProperties().get(LALBootstrap.INSTRUMENTATION_KEY);
+            if (captured instanceof java.lang.instrument.Instrumentation instrumentation) {
+                LALAgent.initInstrumentation(instrumentation);
+            }
+        }
+        catch (Throwable e) {
+        }
+
+        reportStatus();
+    }
+
+    /**
+     * One line either way: with every failure swallowed, a dead agent layer looked identical to a
+     * working one.
+     */
+    private static void reportStatus() {
+        try {
+            if (LALAgentBridge.isAgentReady()) {
+                LOGGER.info("[LAL] java agent attached: retransform self-heal, class scans and bootstrap storage are active");
+            } else {
+                LOGGER.warn("[LAL] java agent NOT attached - retransform self-heal, class scans and bootstrap storage are inactive. "
+                        + "JVM self-attach requires -Djdk.attach.allowAttachSelf=true, or launch with -javaagent:{}",
+                        LALAgentLoader.DEPLOYED_AGENT_JAR);
+            }
+        } catch (Throwable ignored) {
         }
     }
 
+    /**
+     * The Agent-Class must be inside the jar: the Attach API loads it with the system class loader,
+     * which cannot see this mod's classes.
+     */
     private static File createAgentJar() throws Exception {
         File tempDir = new File(System.getProperty("java.io.tmpdir"), "lal-agent");
         if (!tempDir.exists()) {
@@ -43,12 +91,33 @@ public class LALAgentLoader {
         Manifest manifest = new Manifest();
         Attributes attrs = manifest.getMainAttributes();
         attrs.put(Attributes.Name.MANIFEST_VERSION, "1.0");
-        attrs.putValue("Agent-Class", "jp.mikumiku.lal.agent.LALAgent");
+        attrs.putValue("Agent-Class", LALBootstrap.class.getName());
         attrs.putValue("Can-Retransform-Classes", "true");
         attrs.putValue("Can-Redefine-Classes", "true");
-        JarOutputStream jos = new JarOutputStream((OutputStream)new FileOutputStream(agentJar), manifest);
-        jos.close();
+
+        String entryName = LALBootstrap.class.getName().replace('.', '/') + ".class";
+        try (JarOutputStream jos = new JarOutputStream(new FileOutputStream(agentJar), manifest)) {
+            try (java.io.InputStream is = LALBootstrap.class.getClassLoader().getResourceAsStream(entryName)) {
+                if (is == null) {
+                    throw new java.io.IOException("bootstrap agent class not found: " + entryName);
+                }
+                jos.putNextEntry(new java.util.jar.JarEntry(entryName));
+                is.transferTo(jos);
+                jos.closeEntry();
+            }
+        }
+        deployAgentJar(agentJar);
         return agentJar;
+    }
+
+            /** Best effort, so -javaagent:lal-agent.jar has a stable path. */
+    private static void deployAgentJar(File built) {
+        try {
+            if (built.getAbsoluteFile().equals(DEPLOYED_AGENT_JAR.getAbsoluteFile())) return;
+            java.nio.file.Files.copy(built.toPath(), DEPLOYED_AGENT_JAR.toPath(),
+                    java.nio.file.StandardCopyOption.REPLACE_EXISTING);
+        } catch (Throwable ignored) {
+        }
     }
 
     private static void attachAgent(File agentJar) throws Exception {
